public/less/nav.less
/* ... */
ul.social-media {
   font-family: 'Lato',sans-serif;

   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
   *display: inline;
   list-style: none;
   text-align: left;
   padding: 1rem .5rem 0 0;
   margin: 0;
   color: #a8f8ff;
   font-size: 1.4rem;

  li {
    //margin-bottom: 1rem;
  }

  .icon {
    @icon-size: 3rem;
    display: inline-block;
    border-radius: 50%;
    height: @icon-size;
    margin: 0 8px 0 0;
    width: @icon-size;

    &:after {
      font: 400 1em/@icon-size 'FontAwesome';
      display: block;
      line-height: @icon-size;
      text-align: center;
      color: white;
       text-shadow: none;
      -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1);
  -webkit-transition: all 0.3s ease-in-out;
          transition: all 0.3s ease-in-out;
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
    }

    &.email {
       background-image: linear-gradient(to bottom,#0F64B1,#66DDFE);
       &:after {content:'\f003'}
    }
     
    &.twitter {
       background-image: linear-gradient(to bottom,#0c85d0,#1da1f2);
       &:after {content:'\f099'}
    }

    &.codepen {
       background-image: linear-gradient(to bottom,#252525,#444);
       &:after {content:'\f1cb'}
    }

    &.behance {
       background-image: linear-gradient(to bottom,#005dff,#0096ff);
       &:after {content:'\f1b4'}
    }

    &.github {
       background-image: linear-gradient(to bottom,#202d5f,#614381);
       &:after {content:'\f113'}
    }
  }

  li:hover {
    .icon {
        animation: shadow 1s forwards;
        -ms-animation: shadow 1s forwards;
        -moz-animation: shadow 1s forwards;
        -webkit-animation: shadow 1s forwards;

      &:after {
        text-shadow: none;
        -webkit-transform: scale(1.2);
        -ms-transform: scale(1.2);
        transform: scale(1.2);
      }
    }/* icon */
  }/* li:hover */

   @-webkit-keyframes shadow {
     from {box-shadow: 0 0 0 rgba(150,250,255,.25);}
     to {box-shadow: 0 0 0 10px rgba(150,250,255,0);}
   }

   @keyframes shadow {
     from {box-shadow: 0 0 0 rgba(150,250,255,.25);}
     to {box-shadow: 0 0 0 10px rgba(150,250,255,0);}
   }
}/* social connect */



nav {
   font-family: 'Lato',sans-serif;
   font-weight: 600;
   font-size: 1.8rem;
   text-align: center;
   padding-top: 2rem;
   margin-bottom: 2.5rem;
   text-transform: uppercase;

   a {
      display: block;
      text-decoration: none;
      color: @lightBlue;
   }

   > a + a {
      margin-top: 2.8rem;
   }

   .subnav {
      margin-top: -.8rem;

      ul {
         display: -moz-inline-stack;
         display: inline-block;
         zoom: 1;
         *display: inline;
         list-style: none;
         text-align: left;
         padding: 0;
         margin: 0;

         li {
            font-size: 1.2rem;
            color: fade(@lightBlue,85%);
            //margin-bottom: 1rem;
         }
      }
   }
}


.subnav {
   background-image: linear-gradient( fade(@darkBlue,50%), fade(@darkBlue,0%) );
   padding: 1rem;
   width: 100%;
   margin-bottom: 1rem;
   border-radius: 8px 8px 0 0;
   position: relative;
   border-top: 2px solid fade(@blackBlue,60%);

   &:before, &:after {
     content: "";
     position: absolute;
     background-image: linear-gradient(fade(@blackBlue,40%), fade(@blackBlue,0%));
     top: -2px;
     bottom: -2px;
     width: 2px;
   }
   &:before {
      top: 4px;
      left: 0px;
   }
   &:after {
      top: 4px;
      right: 0px;
   }
}

